--- a/projects/mnist/main.yaml
+++ b/projects/mnist/main.yaml
@@ -27,8 +27,10 @@ phases:
 clearml:
   docker:
     env_extras:
-      - CPPLHY_PROJECT=mnist
-      - CPPLHY_CONFIG_NAME=main
+      - SEALLH_PROJECT=mnist
+      - SEALLH_CONFIG_NAME=main
+      - SEALLH_PROJECT=mnist
+      - SEALLH_CONFIG_NAME=main
 
 # MNIST-specific overrides would go here if needed
 # (paths, log_level, hydra are now inherited from defaults.yaml)
